[package]
name = "vulnscan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
hickory-resolver = "0.25.2"
httpmock = { version = "0.8.2", features = ["https"] }
log = "0.4.29"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
